--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,20 @@
+title: My knowledge base
+description: >- # this means to ignore newlines until "baseurl:"
+  Мои заметки о программировании, 1С, собранные в процессе обучения
+baseurl: "/mybase" # the subpath of your site, e.g. /blog
+url: "https://and6270.github.io/mybase/" # the base hostname & protocol for your site
+owner_url: "https://github.com/and6270"
+owner_name: "and6270"
+
+social:
+  links:
+    - https://t.me/and6270
+    - https://github.com/and6270
+lang: ru_RU
+
+# socials:
+telegram_username: and6270
+github_username: and6270
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
