--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,8 @@
   "files.exclude": {
     "_site/**": true
   },
+  "pasteImage.path": "${projectRoot}/attachments",
+  "pasteImage.namePrefix": "${currentFileNameWithoutExt}_",
   "files.insertFinalNewline": true,
   "markdown.styles": [".vscode/custom-tag-style.css"]
 }
